k8s/services/stirling-pdf/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: stirling-pdf
          image: docker.io/stirlingtools/stirling-pdf
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /configs
              subPath: configs
            - name: data
              mountPath: /logs
              subPath: logs
            - name: data
              mountPath: /pipeline
              subPath: pipeline
            - name: data
              mountPath: /usr/share/tessdata
              subPath: tessdata
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: stirling-pdf-data
